[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probeshooter"
version = "1.0.0"
description = "ProbeShooter artifacts (ACM ASIA CCS '25)."
authors = [
    { name = "Daehyeon Bae", email = "dh_bae@korea.ac.kr" }
]
license = { text = "MIT" }
urls = { Homepage = "https://github.com/ProbeShooter/AsiaCCS25-ProbeShooter" }
requires-python = ">=3.13"

[tool.setuptools]
package-dir = { "" = "source" }

[tool.setuptools.packages.find]
where = ["source"]
include = [
    "probeshooter*",
    "dummy_hardware_api*"
]
